# vtr3_utils

./: .gitmodules  boreas_compute_localization_error.py  check_icp_results.py  commands.sh  compute_localization_error.py  generate_parkinglot_ground_truth.py  parkinglot_compute_localization_error.py  plot_gps.py  plot_image_timestamp.py  plot_point_timestamp.py  plot_points.py
boreas/: boreas_player.py
ros2/src/parkinglot_dataset/: CMakeLists.txt  package.xml
ros2/src/parkinglot_dataset/src/: ground_truth.cpp  velocity_cost.cpp
ros2/src/vtr_testing_boreas/: CMakeLists.txt  package.xml
ros2/src/vtr_testing_boreas/config/: boreas.yaml  boreas_v2.yaml
ros2/src/vtr_testing_boreas/include/vtr_testing_boreas/: tactic_callback.hpp
ros2/src/vtr_testing_boreas/script/: commands.sh  generate_odometry_result.py
ros2/src/vtr_testing_boreas/src/: odometry_direct.cpp
ros2/src/vtr_testing_camera/include/vtr_testing_camera/: localization.hpp  offline.hpp
ros2/src/vtr_testing_camera/src/: localization.cpp  odometry.cpp
ros2/src/vtr_testing_graph_map_server/: CMakeLists.txt  package.xml
ros2/src/vtr_testing_graph_map_server/src/: graph_map_server_node.cpp
ros2/src/vtr_testing_honeycomb/src/: odometry_direct.cpp
ros2/src/vtr_testing_lidar/src/: localization.cpp  odometry.cpp
ros2/src/vtr_testing_mission_planning/: CMakeLists.txt  package.xml
ros2/src/vtr_testing_mission_planning/src/: mission_server_node.cpp
ros2/src/vtr_testing_tactic/: CMakeLists.txt  package.xml
ros2/src/vtr_testing_tactic/config/: honeycomb.yaml  honeycomb_v2.yaml
ros2/src/vtr_testing_tactic/include/vtr_testing_tactic/: tactic_callback.hpp
ros2/src/vtr_testing_tactic/script/: commands.sh
ros2/src/vtr_testing_tactic/src/: change_detection.cpp  ground_extraction.cpp  intra_exp_merging.cpp  localization_direct.cpp  localization_planning_direct.cpp  odometry_direct.cpp  odometry_direct2.cpp  terrain_assessment.cpp
